[tool.poetry]
name = "chorus"
version = "0.9.2"
description = ""
authors = ["Seiji Matsuoka <smatsuoka@riken.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.21"
numpy = "^1.19.1"
numexpr = "^2.7.1"
matplotlib = "^3.3.1"
networkx = "^2.5"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
